Fixed search icon only showing on home page, SVGs in IE and Edge and search results on small screens

--- a/wp-content/themes/david-hide-blog/sass/components/_search.scss
+++ b/wp-content/themes/david-hide-blog/sass/components/_search.scss
@@ -46,7 +46,6 @@
 
   &__category {
     color: $color-light-grey;
-    float: right;
     font-weight: 300;
     text-transform: uppercase;
   }
